@@ -4,6 +4,7 @@ import greencity.annotations.ApiPageable;
 import greencity.annotations.CurrentUser;
 import greencity.annotations.CurrentUserId;
 import greencity.annotations.ImageValidation;
+import greencity.annotations.ValidBase64;
 import greencity.constant.HttpStatuses;
 import greencity.dto.EmployeePositionsDto;
 import greencity.dto.PageableAdvancedDto;
@@ -12,14 +13,15 @@ import greencity.dto.UbsCustomerDto;
 import greencity.dto.achievement.UserVOAchievement;
 import greencity.dto.filter.FilterUserDto;
 import greencity.dto.position.PositionAuthoritiesDto;
-import greencity.dto.shoppinglist.CustomShoppingListItemResponseDto;
+import greencity.dto.todolist.CustomToDoListItemResponseDto;
 import greencity.dto.ubs.UbsTableCreationDto;
 import greencity.dto.user.RoleDto;
-import greencity.dto.user.UserAddRatingDto;
 import greencity.dto.user.UserActivationDto;
+import greencity.dto.user.UserAddRatingDto;
 import greencity.dto.user.UserAllFriendsDto;
 import greencity.dto.user.UserAndAllFriendsWithOnlineStatusDto;
 import greencity.dto.user.UserAndFriendsWithOnlineStatusDto;
+import greencity.dto.user.UserCityDto;
 import greencity.dto.user.UserDeactivationReasonDto;
 import greencity.dto.user.UserEmployeeAuthorityDto;
 import greencity.dto.user.UserForListDto;
@@ -34,7 +36,8 @@ import greencity.dto.user.UserRoleDto;
 import greencity.dto.user.UserStatusDto;
 import greencity.dto.user.UserUpdateDto;
 import greencity.dto.user.UserVO;
-import greencity.dto.user.UserCityDto;
+import greencity.dto.user.UsersOnlineStatusRequestDto;
+import greencity.dto.user.DeactivateUserRequestDto;
 import greencity.enums.EmailNotification;
 import greencity.enums.Role;
 import greencity.enums.UserStatus;
@@ -42,20 +45,29 @@ import greencity.security.service.AuthorityService;
 import greencity.security.service.PositionService;
 import greencity.service.EmailService;
 import greencity.service.UserService;
-import io.swagger.annotations.ApiOperation;
-import io.swagger.annotations.ApiParam;
-import io.swagger.annotations.ApiResponse;
-import io.swagger.annotations.ApiResponses;
-import lombok.AllArgsConstructor;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.Parameter;
+import io.swagger.v3.oas.annotations.media.Content;
+import io.swagger.v3.oas.annotations.media.Schema;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.responses.ApiResponses;
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.NotNull;
+import java.security.Principal;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Pageable;
-import org.springframework.format.annotation.DateTimeFormat;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.messaging.handler.annotation.MessageMapping;
+import org.springframework.messaging.handler.annotation.Payload;
 import org.springframework.messaging.handler.annotation.SendTo;
-import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.validation.annotation.Validated;
+import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PatchMapping;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -68,20 +80,10 @@ import org.springframework.web.bind.annotation.RequestPart;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.multipart.MultipartFile;
-import springfox.documentation.annotations.ApiIgnore;
-
-import javax.validation.Valid;
-import javax.validation.constraints.NotNull;
-import java.security.Principal;
-import java.time.LocalDateTime;
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
 
 @RestController
 @RequestMapping("/user")
-@AllArgsConstructor
+@RequiredArgsConstructor
 @Validated
 @Slf4j
 public class UserController {
@@ -96,23 +98,20 @@ public class UserController {
      *
      * @param userStatusDto - dto with updated filed.
      * @return {@link UserStatusDto}
-     * @author Rostyslav Khasanov
      */
-    @ApiOperation(value = "Update status of user")
+    @Operation(summary = "Update status of user")
     @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK, response = UserStatus.class),
-        @ApiResponse(code = 303, message = HttpStatuses.SEE_OTHER),
-        @ApiResponse(code = 400, message = HttpStatuses.BAD_REQUEST),
-        @ApiResponse(code = 401, message = HttpStatuses.UNAUTHORIZED),
-        @ApiResponse(code = 403, message = HttpStatuses.FORBIDDEN)
+        @ApiResponse(responseCode = "200", description = HttpStatuses.OK,
+            content = @Content(schema = @Schema(implementation = UserStatus.class))),
+        @ApiResponse(responseCode = "400", description = HttpStatuses.BAD_REQUEST),
+        @ApiResponse(responseCode = "401", description = HttpStatuses.UNAUTHORIZED),
+        @ApiResponse(responseCode = "403", description = HttpStatuses.FORBIDDEN)
     })
     @PatchMapping("status")
     public ResponseEntity<UserStatusDto> updateStatus(
-        @Valid @RequestBody UserStatusDto userStatusDto, @ApiIgnore Principal principal) {
-        return ResponseEntity.status(HttpStatus.OK)
-            .body(
-                userService.updateStatus(
-                    userStatusDto.getId(), userStatusDto.getUserStatus(), principal.getName()));
+        @Valid @RequestBody UserStatusDto userStatusDto, Principal principal) {
+        return ResponseEntity.ok().body(userService.updateStatus(
+            userStatusDto.getId(), userStatusDto.getUserStatus(), principal.getName()));
     }
 
     /**
@@ -122,27 +121,24 @@ public class UserController {
      * @param id   of updated user
      * @param body contains new role
      * @return {@link UserRoleDto}
-     * @author Rostyslav Khasanov
      */
-    @ApiOperation(value = "Update role of user")
+    @Operation(summary = "Update role of user")
     @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK, response = UserRoleDto.class),
-        @ApiResponse(code = 303, message = HttpStatuses.SEE_OTHER),
-        @ApiResponse(code = 400, message = HttpStatuses.BAD_REQUEST),
-        @ApiResponse(code = 401, message = HttpStatuses.UNAUTHORIZED),
-        @ApiResponse(code = 403, message = HttpStatuses.FORBIDDEN)
+        @ApiResponse(responseCode = "200", description = HttpStatuses.OK,
+            content = @Content(schema = @Schema(implementation = UserRoleDto.class))),
+        @ApiResponse(responseCode = "400", description = HttpStatuses.BAD_REQUEST),
+        @ApiResponse(responseCode = "401", description = HttpStatuses.UNAUTHORIZED),
+        @ApiResponse(responseCode = "403", description = HttpStatuses.FORBIDDEN)
     })
     @PatchMapping("{id}/role")
     public ResponseEntity<UserRoleDto> updateRole(
         @PathVariable Long id,
         @NotNull @RequestBody Map<String, String> body,
-        @ApiIgnore Principal principal) {
+        Principal principal) {
         Role role = Role.valueOf(body.get("role"));
         UserRoleDto userRoleDto = new UserRoleDto(id, role);
-        return ResponseEntity.status(HttpStatus.OK)
-            .body(
-                userService.updateRole(
-                    userRoleDto.getId(), userRoleDto.getRole(), principal.getName()));
+        return ResponseEntity.ok().body(userService.updateRole(
+            userRoleDto.getId(), userRoleDto.getRole(), principal.getName()));
     }
 
     /**
@@ -152,38 +148,37 @@ public class UserController {
      *
      * @param pageable - pageable configuration.
      * @return list of {@link PageableDto}
-     * @author Rostyslav Khasanov
      */
-    @ApiOperation(value = "Get users by page")
+    @Operation(summary = "Get users by page")
     @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK, response = PageableDto.class),
-        @ApiResponse(code = 303, message = HttpStatuses.SEE_OTHER),
-        @ApiResponse(code = 400, message = HttpStatuses.BAD_REQUEST),
-        @ApiResponse(code = 401, message = HttpStatuses.UNAUTHORIZED),
-        @ApiResponse(code = 403, message = HttpStatuses.FORBIDDEN)
+        @ApiResponse(responseCode = "200", description = HttpStatuses.OK,
+            content = @Content(schema = @Schema(implementation = PageableDto.class))),
+        @ApiResponse(responseCode = "400", description = HttpStatuses.BAD_REQUEST),
+        @ApiResponse(responseCode = "401", description = HttpStatuses.UNAUTHORIZED),
+        @ApiResponse(responseCode = "403", description = HttpStatuses.FORBIDDEN)
     })
     @ApiPageable
     @GetMapping("all")
-    public ResponseEntity<PageableDto<UserForListDto>> getAllUsers(@ApiIgnore Pageable pageable) {
-        return ResponseEntity.status(HttpStatus.OK).body(userService.findByPage(pageable));
+    public ResponseEntity<PageableDto<UserForListDto>> getAllUsers(@Parameter(hidden = true) Pageable pageable) {
+        return ResponseEntity.ok().body(userService.findByPage(pageable));
     }
 
     /**
      * The method which return array of user role by user id.
      *
      * @return {@link RoleDto}
-     * @author Rostyslav Khasanov
      */
-    @ApiOperation(value = "Get user role by user id")
+    @Operation(summary = "Get user role by user id")
     @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK, response = RoleDto.class),
-        @ApiResponse(code = 401, message = HttpStatuses.UNAUTHORIZED),
-        @ApiResponse(code = 403, message = HttpStatuses.FORBIDDEN),
-        @ApiResponse(code = 404, message = HttpStatuses.NOT_FOUND)
+        @ApiResponse(responseCode = "200", description = HttpStatuses.OK,
+            content = @Content(schema = @Schema(implementation = RoleDto.class))),
+        @ApiResponse(responseCode = "401", description = HttpStatuses.UNAUTHORIZED),
+        @ApiResponse(responseCode = "403", description = HttpStatuses.FORBIDDEN),
+        @ApiResponse(responseCode = "404", description = HttpStatuses.NOT_FOUND)
     })
     @GetMapping("roles")
     public ResponseEntity<RoleDto> getRoles(@RequestParam Long id) {
-        return ResponseEntity.status(HttpStatus.OK).body(userService.getRoles(id));
+        return ResponseEntity.ok().body(userService.getRoles(id));
     }
 
     /**
@@ -191,21 +186,17 @@ public class UserController {
      * user{@link EmailNotification}.
      *
      * @return {@link EmailNotification} array
-     * @author Nazar Vladyka
      */
-    @ApiOperation(value = "Get email notifications status by authorization user")
+    @Operation(summary = "Get email notifications status by authorization user")
     @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK, response = EmailNotification[].class),
-        @ApiResponse(code = 303, message = HttpStatuses.SEE_OTHER),
-        @ApiResponse(code = 400, message = HttpStatuses.BAD_REQUEST),
-        @ApiResponse(code = 401, message = HttpStatuses.UNAUTHORIZED)
+        @ApiResponse(responseCode = "200", description = HttpStatuses.OK,
+            content = @Content(schema = @Schema(implementation = EmailNotification[].class))),
+        @ApiResponse(responseCode = "400", description = HttpStatuses.BAD_REQUEST),
+        @ApiResponse(responseCode = "401", description = HttpStatuses.UNAUTHORIZED)
     })
     @GetMapping("emailNotifications")
-    public ResponseEntity<List<EmailNotification>> getEmailNotifications(
-        @ApiIgnore @AuthenticationPrincipal Principal principal) {
-        String email = principal.getName();
-        return ResponseEntity.status(HttpStatus.OK)
-            .body(Collections.singletonList(userService.getEmailNotificationsStatuses(email)));
+    public ResponseEntity<List<EmailNotification>> getEmailNotifications(Principal principal) {
+        return ResponseEntity.ok().body(List.of(userService.getEmailNotificationsStatuses(principal.getName())));
     }
 
     /**
@@ -216,144 +207,127 @@ public class UserController {
      * @param filterUserDto dto which contains fields with filter criteria.
      * @param pageable      - pageable configuration.
      * @return {@link PageableDto}
-     * @author Rostyslav Khasanov
      */
-    @ApiOperation(value = "Filter all user by search criteria")
+    @Operation(summary = "Filter all user by search criteria")
     @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK, response = PageableDto.class),
-        @ApiResponse(code = 303, message = HttpStatuses.SEE_OTHER),
-        @ApiResponse(code = 400, message = HttpStatuses.BAD_REQUEST),
-        @ApiResponse(code = 401, message = HttpStatuses.UNAUTHORIZED),
-        @ApiResponse(code = 403, message = HttpStatuses.FORBIDDEN)
+        @ApiResponse(responseCode = "200", description = HttpStatuses.OK,
+            content = @Content(schema = @Schema(implementation = PageableDto.class))),
+        @ApiResponse(responseCode = "400", description = HttpStatuses.BAD_REQUEST),
+        @ApiResponse(responseCode = "401", description = HttpStatuses.UNAUTHORIZED),
+        @ApiResponse(responseCode = "403", description = HttpStatuses.FORBIDDEN)
     })
     @ApiPageable
     @PostMapping("filter")
     public ResponseEntity<PageableDto<UserForListDto>> getUsersByFilter(
-        @ApiIgnore Pageable pageable, @RequestBody FilterUserDto filterUserDto) {
-        return ResponseEntity.status(HttpStatus.OK).body(userService.getUsersByFilter(filterUserDto, pageable));
+        @Parameter(hidden = true) Pageable pageable, @RequestBody FilterUserDto filterUserDto) {
+        return ResponseEntity.ok().body(userService.getUsersByFilter(filterUserDto, pageable));
     }
 
     /**
      * Get {@link UserVO} dto by principal (email) from access token.
      *
      * @return {@link UserUpdateDto}.
-     * @author Nazar Stasyuk
      */
-    @ApiOperation(value = "Get User dto by principal (email) from access token")
+    @Operation(summary = "Get User dto by principal (email) from access token")
     @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK, response = UserUpdateDto.class),
-        @ApiResponse(code = 303, message = HttpStatuses.SEE_OTHER),
-        @ApiResponse(code = 400, message = HttpStatuses.BAD_REQUEST),
-        @ApiResponse(code = 401, message = HttpStatuses.UNAUTHORIZED),
-        @ApiResponse(code = 403, message = HttpStatuses.FORBIDDEN)
+        @ApiResponse(responseCode = "200", description = HttpStatuses.OK,
+            content = @Content(schema = @Schema(implementation = UserUpdateDto.class))),
+        @ApiResponse(responseCode = "400", description = HttpStatuses.BAD_REQUEST),
+        @ApiResponse(responseCode = "401", description = HttpStatuses.UNAUTHORIZED),
+        @ApiResponse(responseCode = "403", description = HttpStatuses.FORBIDDEN)
     })
     @GetMapping
-    public ResponseEntity<UserUpdateDto> getUserByPrincipal(@ApiIgnore @AuthenticationPrincipal Principal principal) {
-        String email = principal.getName();
-        return ResponseEntity.status(HttpStatus.OK).body(userService.getUserUpdateDtoByEmail(email));
+    public ResponseEntity<UserUpdateDto> getUserByPrincipal(Principal principal) {
+        return ResponseEntity.ok().body(userService.getUserUpdateDtoByEmail(principal.getName()));
     }
 
     /**
      * Update {@link UserVO}.
      *
      * @return {@link ResponseEntity}.
-     * @author Nazar Stasyuk
      */
-    @ApiOperation(value = "Update User")
+    @Operation(summary = "Update User")
     @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK),
-        @ApiResponse(code = 303, message = HttpStatuses.SEE_OTHER),
-        @ApiResponse(code = 400, message = HttpStatuses.BAD_REQUEST),
-        @ApiResponse(code = 401, message = HttpStatuses.UNAUTHORIZED),
-        @ApiResponse(code = 403, message = HttpStatuses.FORBIDDEN)
+        @ApiResponse(responseCode = "200", description = HttpStatuses.OK),
+        @ApiResponse(responseCode = "400", description = HttpStatuses.BAD_REQUEST),
+        @ApiResponse(responseCode = "401", description = HttpStatuses.UNAUTHORIZED),
+        @ApiResponse(responseCode = "403", description = HttpStatuses.FORBIDDEN)
     })
     @PatchMapping
-    public ResponseEntity<UserUpdateDto> updateUser(@Valid @RequestBody UserUpdateDto dto,
-        @ApiIgnore @AuthenticationPrincipal Principal principal) {
-        String email = principal.getName();
-        return ResponseEntity.status(HttpStatus.OK).body(userService.update(dto, email));
+    public ResponseEntity<UserUpdateDto> updateUser(@Valid @RequestBody UserUpdateDto dto, Principal principal) {
+        return ResponseEntity.ok().body(userService.update(dto, principal.getName()));
     }
 
     /**
      * Update ubs employee's email {@link UserVO}.
-     *
-     * @author Inna Yashna
      */
-    @ApiOperation(value = "Update employee's email")
+    @Operation(summary = "Update employee's email")
     @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK),
-        @ApiResponse(code = 400, message = HttpStatuses.BAD_REQUEST),
-        @ApiResponse(code = 401, message = HttpStatuses.UNAUTHORIZED),
-        @ApiResponse(code = 403, message = HttpStatuses.FORBIDDEN)
+        @ApiResponse(responseCode = "200", description = HttpStatuses.OK),
+        @ApiResponse(responseCode = "400", description = HttpStatuses.BAD_REQUEST),
+        @ApiResponse(responseCode = "401", description = HttpStatuses.UNAUTHORIZED),
+        @ApiResponse(responseCode = "403", description = HttpStatuses.FORBIDDEN)
     })
     @PutMapping("/employee-email")
     public ResponseEntity<HttpStatus> updateEmployeeEmail(@RequestParam String newEmployeeEmail,
         @RequestParam String uuid) {
         userService.updateEmployeeEmail(newEmployeeEmail, uuid);
-        return ResponseEntity.status(HttpStatus.OK).build();
+        return ResponseEntity.ok().build();
     }
 
     /**
-     * Method returns list of available (not ACTIVE) custom shopping list items for
+     * Method returns list of available (not ACTIVE) custom to-do list items for
      * user.
      *
      * @return {@link ResponseEntity}.
-     * @author Vitalii Skolozdra
      */
-    @ApiOperation(value = "Get available custom shopping list items for current user.")
+    @Operation(summary = "Get available custom to-do list items for current user.")
     @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK),
-        @ApiResponse(code = 400, message = HttpStatuses.BAD_REQUEST),
-        @ApiResponse(code = 401, message = HttpStatuses.UNAUTHORIZED),
+        @ApiResponse(responseCode = "200", description = HttpStatuses.OK),
+        @ApiResponse(responseCode = "400", description = HttpStatuses.BAD_REQUEST),
+        @ApiResponse(responseCode = "401", description = HttpStatuses.UNAUTHORIZED),
     })
-    @GetMapping("/{userId}/{habitId}/custom-shopping-list-items/available")
-    public ResponseEntity<List<CustomShoppingListItemResponseDto>> getAvailableCustomShoppingListItems(
-        @ApiParam("Id of current user. Cannot be empty.") @PathVariable @CurrentUserId Long userId,
+    @GetMapping("/{userId}/{habitId}/custom-to-do-list-items/available")
+    public ResponseEntity<List<CustomToDoListItemResponseDto>> getAvailableCustomToDoListItems(
+        @Parameter(description = "Id of current user. Cannot be empty.") @PathVariable @CurrentUserId Long userId,
         @PathVariable Long habitId) {
-        return ResponseEntity
-            .status(HttpStatus.OK)
-            .body(userService.getAvailableCustomShoppingListItems(userId, habitId));
+        return ResponseEntity.ok().body(userService.getAvailableCustomToDoListItems(userId, habitId));
     }
 
     /**
      * Counts all users by user {@link UserStatus} ACTIVATED.
      *
      * @return amount of users with {@link UserStatus} ACTIVATED.
-     * @author Shevtsiv Rostyslav
      */
-    @ApiOperation(value = "Get all activated users amount")
+    @Operation(summary = "Get all activated users amount")
     @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK, response = Long.class),
-        @ApiResponse(code = 303, message = HttpStatuses.SEE_OTHER),
-        @ApiResponse(code = 400, message = HttpStatuses.BAD_REQUEST),
+        @ApiResponse(responseCode = "200", description = HttpStatuses.OK),
+        @ApiResponse(responseCode = "400", description = HttpStatuses.BAD_REQUEST),
     })
     @GetMapping("/activatedUsersAmount")
     public ResponseEntity<Long> getActivatedUsersAmount() {
-        return ResponseEntity.status(HttpStatus.OK)
-            .body(userService.getActivatedUsersAmount());
+        return ResponseEntity.ok().body(userService.getActivatedUsersAmount());
     }
 
     /**
      * Update user profile picture {@link UserVO}.
      *
      * @return {@link ResponseEntity}.
-     * @author Datsko Marian
      */
-    @ApiOperation(value = "Update user profile picture")
+    @Operation(summary = "Update user profile picture")
     @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK),
-        @ApiResponse(code = 303, message = HttpStatuses.SEE_OTHER),
-        @ApiResponse(code = 400, message = HttpStatuses.BAD_REQUEST),
-        @ApiResponse(code = 401, message = HttpStatuses.UNAUTHORIZED),
+        @ApiResponse(responseCode = "200", description = HttpStatuses.OK),
+        @ApiResponse(responseCode = "400", description = HttpStatuses.BAD_REQUEST),
+        @ApiResponse(responseCode = "401", description = HttpStatuses.UNAUTHORIZED),
     })
-    @PatchMapping(path = "/profilePicture")
+    @PatchMapping(consumes = MediaType.MULTIPART_FORM_DATA_VALUE,
+        path = "/profilePicture")
     public ResponseEntity<HttpStatus> updateUserProfilePicture(
-        @ApiParam(value = "pass image as base64") @RequestPart(required = false) String base64,
-        @ApiParam(value = "Profile picture") @ImageValidation @RequestPart(required = false) MultipartFile image,
-        @ApiIgnore @AuthenticationPrincipal Principal principal) {
-        String email = principal.getName();
-        userService.updateUserProfilePicture(image, email, base64);
-        return ResponseEntity.status(HttpStatus.OK).build();
+        @Parameter(description = "pass image as base64") @ValidBase64 @RequestPart(required = false) String base64,
+        @Parameter(description = "Profile picture") @ImageValidation @RequestPart(required = false) MultipartFile image,
+        Principal principal) {
+        userService.updateUserProfilePicture(image, principal.getName(), base64);
+        return ResponseEntity.ok().build();
     }
 
     /**
@@ -361,19 +335,16 @@ public class UserController {
      *
      * @return {@link ResponseEntity}.
      */
-    @ApiOperation(value = "Delete user profile picture")
+    @Operation(summary = "Delete user profile picture")
     @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK),
-        @ApiResponse(code = 303, message = HttpStatuses.SEE_OTHER),
-        @ApiResponse(code = 400, message = HttpStatuses.BAD_REQUEST),
-        @ApiResponse(code = 401, message = HttpStatuses.UNAUTHORIZED),
+        @ApiResponse(responseCode = "200", description = HttpStatuses.OK),
+        @ApiResponse(responseCode = "400", description = HttpStatuses.BAD_REQUEST),
+        @ApiResponse(responseCode = "401", description = HttpStatuses.UNAUTHORIZED),
     })
-    @PatchMapping(path = "/deleteProfilePicture")
-    public ResponseEntity<HttpStatus> deleteUserProfilePicture(
-        @ApiIgnore @AuthenticationPrincipal Principal principal) {
-        String email = principal.getName();
-        userService.deleteUserProfilePicture(email);
-        return ResponseEntity.status(HttpStatus.OK).build();
+    @DeleteMapping(path = "/deleteProfilePicture")
+    public ResponseEntity<HttpStatus> deleteUserProfilePicture(Principal principal) {
+        userService.deleteUserProfilePicture(principal.getName());
+        return ResponseEntity.ok().build();
     }
 
     /**
@@ -381,92 +352,81 @@ public class UserController {
      *
      * @param userProfileDtoRequest - dto for {@link UserVO} entity.
      * @return dto {@link UserProfileDtoResponse} instance.
-     * @author Marian Datsko.
      */
-    @ApiOperation(value = "Save user profile information")
+    @Operation(summary = "Save user profile information")
     @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK),
-        @ApiResponse(code = 303, message = HttpStatuses.SEE_OTHER),
-        @ApiResponse(code = 401, message = HttpStatuses.UNAUTHORIZED),
+        @ApiResponse(responseCode = "200", description = HttpStatuses.OK),
+        @ApiResponse(responseCode = "400", description = HttpStatuses.BAD_REQUEST),
+        @ApiResponse(responseCode = "401", description = HttpStatuses.UNAUTHORIZED),
+        @ApiResponse(responseCode = "404", description = HttpStatuses.NOT_FOUND)
     })
     @PutMapping(path = "/profile")
     public ResponseEntity<String> save(
-        @ApiParam(required = true) @RequestBody @Valid UserProfileDtoRequest userProfileDtoRequest,
-        @ApiIgnore Principal principal) {
-        return ResponseEntity.status(HttpStatus.OK).body(userService.saveUserProfile(userProfileDtoRequest,
-            principal.getName()));
+        @Parameter(required = true) @RequestBody @Valid UserProfileDtoRequest userProfileDtoRequest,
+        Principal principal) {
+        return ResponseEntity.ok().body(userService.saveUserProfile(userProfileDtoRequest, principal.getName()));
     }
 
     /**
      * Method returns user profile information.
      *
      * @return {@link UserProfileDtoResponse}.
-     * @author Datsko Marian
      */
-    @ApiOperation(value = "Get user profile information by id")
+    @Operation(summary = "Get user profile information by id")
     @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK),
-        @ApiResponse(code = 400, message = HttpStatuses.BAD_REQUEST),
-        @ApiResponse(code = 401, message = HttpStatuses.UNAUTHORIZED),
-        @ApiResponse(code = 404, message = HttpStatuses.NOT_FOUND)
+        @ApiResponse(responseCode = "200", description = HttpStatuses.OK),
+        @ApiResponse(responseCode = "400", description = HttpStatuses.BAD_REQUEST),
+        @ApiResponse(responseCode = "401", description = HttpStatuses.UNAUTHORIZED),
+        @ApiResponse(responseCode = "404", description = HttpStatuses.NOT_FOUND)
     })
     @GetMapping("/{userId}/profile/")
     public ResponseEntity<UserProfileDtoResponse> getUserProfileInformation(
-        @ApiParam("Id of current user. Cannot be empty.") @PathVariable @CurrentUserId Long userId) {
-        return ResponseEntity
-            .status(HttpStatus.OK)
-            .body(userService.getUserProfileInformation(userId));
+        @Parameter(description = "Id of current user. Cannot be empty.") @PathVariable @CurrentUserId Long userId) {
+        return ResponseEntity.ok().body(userService.getUserProfileInformation(userId));
     }
 
     /**
      * The method checks by id if a {@link UserVO} is online.
      *
      * @return {@link ResponseEntity}.
-     * @author Zhurakovskyi Yurii
      */
-    @ApiOperation(value = "Check by id if the user is online")
+    @Operation(summary = "Check by id if the user is online")
     @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK),
-        @ApiResponse(code = 400, message = HttpStatuses.BAD_REQUEST),
-        @ApiResponse(code = 401, message = HttpStatuses.UNAUTHORIZED),
+        @ApiResponse(responseCode = "200", description = HttpStatuses.OK),
+        @ApiResponse(responseCode = "400", description = HttpStatuses.BAD_REQUEST),
+        @ApiResponse(responseCode = "401", description = HttpStatuses.UNAUTHORIZED),
     })
     @GetMapping("isOnline/{userId}/")
     public ResponseEntity<Boolean> checkIfTheUserIsOnline(
-        @ApiParam("Id of the user. Cannot be empty.") @PathVariable Long userId) {
-        return ResponseEntity
-            .status(HttpStatus.OK)
-            .body(userService.checkIfTheUserIsOnline(userId));
+        @Parameter(description = "Id of the user. Cannot be empty.") @PathVariable Long userId) {
+        return ResponseEntity.ok().body(userService.checkIfTheUserIsOnline(userId));
     }
 
     /**
      * Method returns user profile statistics.
      *
      * @return {@link UserProfileStatisticsDto}.
-     * @author Datsko Marian
      */
-    @ApiOperation(value = "Get user profile statistics by id")
+    @Operation(summary = "Get user profile statistics by id")
     @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK),
-        @ApiResponse(code = 400, message = HttpStatuses.BAD_REQUEST),
-        @ApiResponse(code = 401, message = HttpStatuses.UNAUTHORIZED),
+        @ApiResponse(responseCode = "200", description = HttpStatuses.OK),
+        @ApiResponse(responseCode = "400", description = HttpStatuses.BAD_REQUEST),
+        @ApiResponse(responseCode = "401", description = HttpStatuses.UNAUTHORIZED),
     })
     @GetMapping("/{userId}/profileStatistics/")
     public ResponseEntity<UserProfileStatisticsDto> getUserProfileStatistics(
-        @ApiParam("Id of current user. Cannot be empty.") @PathVariable @CurrentUserId Long userId) {
-        return ResponseEntity.status(HttpStatus.OK)
-            .body(userService.getUserProfileStatistics(userId));
+        @Parameter(description = "Id of current user. Cannot be empty.") @PathVariable @CurrentUserId Long userId) {
+        return ResponseEntity.ok().body(userService.getUserProfileStatistics(userId));
     }
 
     /**
      * The method get {@link UserVO}s with online status for the current user-id.
      *
      * @return {@link UserAndFriendsWithOnlineStatusDto}.
-     * @author Zhurakovskyi Yurii
      */
     @MessageMapping("/userAndSixFriendsWithOnlineStatus")
     @SendTo("/topic/sixUsersOnlineStatus")
-    public UserAndFriendsWithOnlineStatusDto getUserAndSixFriendsWithOnlineStatus(
-        Long userId) {
+    public UserAndFriendsWithOnlineStatusDto getUserAndSixFriendsWithOnlineStatus(Long userId) {
         return userService.getUserAndSixFriendsWithOnlineStatus(userId);
     }
 
@@ -475,115 +435,119 @@ public class UserController {
      * user-id.
      *
      * @return {@link UserAndAllFriendsWithOnlineStatusDto}.
-     * @author Zhurakovskyi Yurii
      */
     @MessageMapping("/userAndAllFriendsWithOnlineStatus")
     @SendTo("/topic/userAndAllFriendsOnlineStatus")
-    public UserAndAllFriendsWithOnlineStatusDto getUserAndAllFriendsWithOnlineStatus(
-        Long userId, Pageable pageable) {
+    public UserAndAllFriendsWithOnlineStatusDto getUserAndAllFriendsWithOnlineStatus(Long userId, Pageable pageable) {
         return userService.getAllFriendsWithTheOnlineStatus(userId, pageable);
+    }
+
+    /**
+     * Method for checking Users online status (true or false).
+     *
+     * @param request {@link UsersOnlineStatusRequestDto} - request with current
+     *                User ID and list of Users ID whose statuses need to be
+     *                checked.
+     */
+    @MessageMapping("/usersOnlineStatus")
+    public void checkUsersOnlineStatus(@Payload UsersOnlineStatusRequestDto request) {
+        userService.checkUsersOnlineStatus(request);
     }
 
     /**
      * Method find user by principal.
      *
      * @return {@link ResponseEntity}.
-     * @author Orest Mamchuk
      */
-    @ApiOperation(value = "Find current user by principal")
+    @Operation(summary = "Find current user by principal")
     @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK),
-        @ApiResponse(code = 400, message = HttpStatuses.BAD_REQUEST),
-        @ApiResponse(code = 401, message = HttpStatuses.UNAUTHORIZED),
+        @ApiResponse(responseCode = "200", description = HttpStatuses.OK),
+        @ApiResponse(responseCode = "400", description = HttpStatuses.BAD_REQUEST),
+        @ApiResponse(responseCode = "401", description = HttpStatuses.UNAUTHORIZED),
     })
     @GetMapping("/findByEmail")
     public ResponseEntity<UserVO> findByEmail(@RequestParam String email) {
-        return ResponseEntity.status(HttpStatus.OK).body(userService.findByEmail(email));
+        return ResponseEntity.ok().body(userService.findByEmail(email));
     }
 
     /**
      * Get {@link UserVO} by id.
      *
      * @return {@link UserUpdateDto}.
-     * @author Orest Mamchuk
      */
-    @ApiOperation(value = "Get User by id")
+    @Operation(summary = "Get User by id")
     @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK),
-        @ApiResponse(code = 400, message = HttpStatuses.BAD_REQUEST),
-        @ApiResponse(code = 401, message = HttpStatuses.UNAUTHORIZED),
+        @ApiResponse(responseCode = "200", description = HttpStatuses.OK),
+        @ApiResponse(responseCode = "400", description = HttpStatuses.BAD_REQUEST),
+        @ApiResponse(responseCode = "401", description = HttpStatuses.UNAUTHORIZED),
     })
     @GetMapping("/findById")
     public ResponseEntity<UserVO> findById(@RequestParam Long id) {
-        return ResponseEntity.status(HttpStatus.OK).body(userService.findById(id));
+        return ResponseEntity.ok().body(userService.findById(id));
     }
 
     /**
      * Method that allow you to find {@link UserVO} by Id.
      *
      * @return {@link UserUpdateDto}.
-     * @author Orest Mamchuk
      */
-    @ApiOperation(value = "Get User by id")
+    @Operation(summary = "Get User by id")
     @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK),
-        @ApiResponse(code = 400, message = HttpStatuses.BAD_REQUEST),
-        @ApiResponse(code = 401, message = HttpStatuses.UNAUTHORIZED),
+        @ApiResponse(responseCode = "200", description = HttpStatuses.OK),
+        @ApiResponse(responseCode = "400", description = HttpStatuses.BAD_REQUEST),
+        @ApiResponse(responseCode = "401", description = HttpStatuses.UNAUTHORIZED),
     })
     @GetMapping("/findByIdForAchievement")
     public ResponseEntity<UserVOAchievement> findUserForAchievement(@RequestParam Long id) {
-        return ResponseEntity.status(HttpStatus.OK).body(userService.findUserForAchievement(id));
+        return ResponseEntity.ok().body(userService.findUserForAchievement(id));
     }
 
     /**
      * Method that allow you to find {@link UserVO} for management.
      *
      * @return {@link UserUpdateDto}.
-     * @author Orest Mamchuk
      */
-    @ApiOperation(value = "Get User for management")
+    @Operation(summary = "Get User for management")
     @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK),
-        @ApiResponse(code = 400, message = HttpStatuses.BAD_REQUEST),
-        @ApiResponse(code = 401, message = HttpStatuses.UNAUTHORIZED),
-        @ApiResponse(code = 403, message = HttpStatuses.FORBIDDEN)
+        @ApiResponse(responseCode = "200", description = HttpStatuses.OK),
+        @ApiResponse(responseCode = "400", description = HttpStatuses.BAD_REQUEST),
+        @ApiResponse(responseCode = "401", description = HttpStatuses.UNAUTHORIZED),
+        @ApiResponse(responseCode = "403", description = HttpStatuses.FORBIDDEN)
     })
     @GetMapping("/findUserForManagement")
     @ApiPageable
     public ResponseEntity<PageableAdvancedDto<UserManagementDto>> findUserForManagementByPage(
-        @ApiIgnore Pageable pageable) {
-        return ResponseEntity.status(HttpStatus.OK).body(userService.findUserForManagementByPage(pageable));
+        @Parameter(hidden = true) Pageable pageable) {
+        return ResponseEntity.ok().body(userService.findUserForManagementByPage(pageable));
     }
 
     /**
      * Method that allow you to find {@link UserVO} by Id.
      *
      * @return {@link UserUpdateDto}.
-     * @author Orest Mamchuk
      */
-    @ApiOperation(value = "Get User by id")
+    @Operation(summary = "Get User by id")
     @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK),
-        @ApiResponse(code = 400, message = HttpStatuses.BAD_REQUEST),
-        @ApiResponse(code = 401, message = HttpStatuses.UNAUTHORIZED),
-        @ApiResponse(code = 403, message = HttpStatuses.FORBIDDEN)
+        @ApiResponse(responseCode = "200", description = HttpStatuses.OK),
+        @ApiResponse(responseCode = "400", description = HttpStatuses.BAD_REQUEST),
+        @ApiResponse(responseCode = "401", description = HttpStatuses.UNAUTHORIZED),
+        @ApiResponse(responseCode = "403", description = HttpStatuses.FORBIDDEN)
     })
     @GetMapping("/searchBy")
     @ApiPageable
     public ResponseEntity<PageableAdvancedDto<UserManagementDto>> searchBy(
         @RequestParam(required = false, name = "query") String query,
-        @ApiIgnore Pageable pageable) {
-        return ResponseEntity.status(HttpStatus.OK).body(userService.searchBy(pageable, query));
+        @Parameter(hidden = true) Pageable pageable) {
+        return ResponseEntity.ok().body(userService.searchBy(pageable, query));
     }
 
     /**
      * Method that updates user data.
      *
      * @param userDto dto with updated fields.
-     * @author Orest Mamchuk
      */
-    @ApiOperation(value = "update via UserManagement")
-    @ApiResponses(value = @ApiResponse(code = 401, message = HttpStatuses.UNAUTHORIZED))
+    @Operation(summary = "update via UserManagement")
+    @ApiResponses(value = @ApiResponse(responseCode = "401", description = HttpStatuses.UNAUTHORIZED))
     @PutMapping("/{id}")
     @ResponseStatus(HttpStatus.OK)
     public void updateUserManagement(
@@ -596,18 +560,17 @@ public class UserController {
      * Method that allow you to find all users {@link UserVO}.
      *
      * @return {@link UserVO list}.
-     * @author Orest Mamchuk
      */
-    @ApiOperation(value = "Get all Users")
+    @Operation(summary = "Get all Users")
     @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK),
-        @ApiResponse(code = 400, message = HttpStatuses.BAD_REQUEST),
-        @ApiResponse(code = 401, message = HttpStatuses.UNAUTHORIZED),
-        @ApiResponse(code = 403, message = HttpStatuses.FORBIDDEN)
+        @ApiResponse(responseCode = "200", description = HttpStatuses.OK),
+        @ApiResponse(responseCode = "400", description = HttpStatuses.BAD_REQUEST),
+        @ApiResponse(responseCode = "401", description = HttpStatuses.UNAUTHORIZED),
+        @ApiResponse(responseCode = "403", description = HttpStatuses.FORBIDDEN)
     })
     @GetMapping("/findAll")
     public ResponseEntity<List<UserVO>> findAll() {
-        return ResponseEntity.status(HttpStatus.OK).body(userService.findAll());
+        return ResponseEntity.ok().body(userService.findAll());
     }
 
     /**
@@ -615,19 +578,16 @@ public class UserController {
      *
      * @param email - {@link UserVO}'s email
      * @return {@link UserVO}.
-     * @author Orest Mamchuk
      */
-    @ApiOperation(value = "Get find not 'DEACTIVATED' User by email")
+    @Operation(summary = "Get find not 'DEACTIVATED' User by email")
     @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK),
-        @ApiResponse(code = 400, message = HttpStatuses.BAD_REQUEST),
-        @ApiResponse(code = 401, message = HttpStatuses.UNAUTHORIZED),
+        @ApiResponse(responseCode = "200", description = HttpStatuses.OK),
+        @ApiResponse(responseCode = "400", description = HttpStatuses.BAD_REQUEST),
+        @ApiResponse(responseCode = "401", description = HttpStatuses.UNAUTHORIZED),
     })
     @GetMapping("/findNotDeactivatedByEmail")
     public ResponseEntity<UserVO> findNotDeactivatedByEmail(@RequestParam String email) {
-        UserVO userVO = userService.findNotDeactivatedByEmail(email).orElse(null);
-        return ResponseEntity.status(HttpStatus.OK)
-            .body(userVO);
+        return ResponseEntity.ok().body(userService.findNotDeactivatedByEmail(email).orElse(null));
     }
 
     /**
@@ -635,34 +595,33 @@ public class UserController {
      *
      * @return {@link UbsTableCreationDto}
      */
-    @ApiIgnore
-    @ApiOperation(value = "Creates uuid and returns it to ubs microservice.")
+    @Parameter(hidden = true)
+    @Operation(summary = "Creates uuid and returns it to ubs microservice.")
     @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK),
-        @ApiResponse(code = 403, message = HttpStatuses.FORBIDDEN)
+        @ApiResponse(responseCode = "200", description = HttpStatuses.OK),
+        @ApiResponse(responseCode = "403", description = HttpStatuses.FORBIDDEN)
     })
     @GetMapping("/createUbsRecord")
     public ResponseEntity<UbsTableCreationDto> createUbsRecord(
-        @ApiIgnore @CurrentUser UserVO userVO) {
-        return ResponseEntity.status(HttpStatus.OK).body(userService.createUbsRecord(userVO));
+        @Parameter(hidden = true) @CurrentUser UserVO userVO) {
+        return ResponseEntity.ok().body(userService.createUbsRecord(userVO));
     }
 
     /**
      * Get {@link UserVO} id by email.
      *
      * @return {@link Long}.
-     * @author Orest Mamchuk
      */
-    @ApiOperation(value = "Get User id by email")
+    @Operation(summary = "Get User id by email")
     @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK),
-        @ApiResponse(code = 400, message = HttpStatuses.BAD_REQUEST),
-        @ApiResponse(code = 401, message = HttpStatuses.UNAUTHORIZED),
-        @ApiResponse(code = 403, message = HttpStatuses.FORBIDDEN)
+        @ApiResponse(responseCode = "200", description = HttpStatuses.OK),
+        @ApiResponse(responseCode = "400", description = HttpStatuses.BAD_REQUEST),
+        @ApiResponse(responseCode = "401", description = HttpStatuses.UNAUTHORIZED),
+        @ApiResponse(responseCode = "403", description = HttpStatuses.FORBIDDEN)
     })
     @GetMapping("/findIdByEmail")
     public ResponseEntity<Long> findIdByEmail(@RequestParam String email) {
-        return ResponseEntity.status(HttpStatus.OK).body(userService.findIdByEmail(email));
+        return ResponseEntity.ok().body(userService.findIdByEmail(email));
     }
 
     /**
@@ -670,60 +629,45 @@ public class UserController {
      *
      * @return {@link String}.
      */
-    @ApiOperation(value = "Get User uuid by email")
+    @Operation(summary = "Get User uuid by email")
     @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK),
-        @ApiResponse(code = 400, message = HttpStatuses.BAD_REQUEST),
-        @ApiResponse(code = 401, message = HttpStatuses.UNAUTHORIZED),
-        @ApiResponse(code = 403, message = HttpStatuses.FORBIDDEN)
+        @ApiResponse(responseCode = "200", description = HttpStatuses.OK),
+        @ApiResponse(responseCode = "400", description = HttpStatuses.BAD_REQUEST),
+        @ApiResponse(responseCode = "401", description = HttpStatuses.UNAUTHORIZED),
+        @ApiResponse(responseCode = "403", description = HttpStatuses.FORBIDDEN)
     })
     @GetMapping("/findUuidByEmail")
     public ResponseEntity<String> findUuidByEmail(@RequestParam String email) {
-        return ResponseEntity.status(HttpStatus.OK).body(userService.findUuIdByEmail(email));
+        return ResponseEntity.ok().body(userService.findUuIdByEmail(email));
     }
 
     /**
-     * Update {@link UserVO} Last Activity Time.
+     * Method for deactivating a {@link UserVO} by setting its status to
+     * DEACTIVATED, preventing the user from logging into the system.
      *
-     * @param userVO {@link UserVO}.
-     * @author Orest Mamchuk
+     * @param userVO  the {@link UserVO} object representing the current user
+     *                performing the deactivation.
+     * @param uuid    the UUID of the user to deactivate.
+     * @param request the {@link DeactivateUserRequestDto} containing deactivation
+     *                information.
+     * @return ResponseEntity indicating the success of the deactivation operation.
      */
-    @ApiOperation(value = "Update User Last Activity Time")
+    @Operation(summary = "Deactivate user indicating the reason for deactivation")
     @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK),
-        @ApiResponse(code = 400, message = HttpStatuses.BAD_REQUEST),
-        @ApiResponse(code = 401, message = HttpStatuses.UNAUTHORIZED),
-        @ApiResponse(code = 403, message = HttpStatuses.FORBIDDEN)
-    })
-    @PutMapping("/updateUserLastActivityTime/{date}")
-    public ResponseEntity<Object> updateUserLastActivityTime(@ApiIgnore @CurrentUser UserVO userVO,
-        @PathVariable(value = "date") @DateTimeFormat(
-            pattern = "yyyy-MM-dd.HH:mm:ss.SSSSSS") LocalDateTime userLastActivityTime) {
-        userService.updateUserLastActivityTime(userVO.getId(), userLastActivityTime);
-        return ResponseEntity.status(HttpStatus.OK).build();
-    }
-
-    /**
-     * Method for setting {@link UserVO}'s status to DEACTIVATED, so the user will
-     * not be able to log in into the system.
-     *
-     * @param id          of the searched {@link UserVO}.
-     * @param userReasons {@link List} of {@link String}.
-     * @author Orest Mamchuk
-     */
-    @ApiOperation(value = "Deactivate user indicating the list of reasons for deactivation")
-    @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK),
-        @ApiResponse(code = 400, message = HttpStatuses.BAD_REQUEST),
-        @ApiResponse(code = 401, message = HttpStatuses.UNAUTHORIZED),
-        @ApiResponse(code = 403, message = HttpStatuses.FORBIDDEN)
+        @ApiResponse(responseCode = "200", description = HttpStatuses.OK),
+        @ApiResponse(responseCode = "400", description = HttpStatuses.BAD_REQUEST),
+        @ApiResponse(responseCode = "401", description = HttpStatuses.UNAUTHORIZED),
+        @ApiResponse(responseCode = "403", description = HttpStatuses.FORBIDDEN),
+        @ApiResponse(responseCode = "404", description = HttpStatuses.NOT_FOUND)
     })
     @PutMapping("/deactivate")
-    public ResponseEntity<ResponseEntity.BodyBuilder> deactivateUser(@RequestParam Long id,
-        @RequestBody List<String> userReasons) {
-        UserDeactivationReasonDto userDeactivationDto = userService.deactivateUser(id, userReasons);
+    public ResponseEntity<ResponseEntity.BodyBuilder> deactivateUser(
+        @Parameter(hidden = true) @CurrentUser UserVO userVO,
+        @RequestParam String uuid,
+        @Valid @RequestBody DeactivateUserRequestDto request) {
+        UserDeactivationReasonDto userDeactivationDto = userService.deactivateUser(uuid, request, userVO);
         emailService.sendReasonOfDeactivation(userDeactivationDto);
-        return ResponseEntity.status(HttpStatus.OK).build();
+        return ResponseEntity.ok().build();
     }
 
     /**
@@ -732,17 +676,33 @@ public class UserController {
      * @param userVO {@link UserVO} the current user that wants to get his profile
      *               language
      * @return current user language {@link String}.
-     * @author Vlad Pikhotskyi
      */
-    @ApiOperation(value = "Get the current User language")
+    @Operation(summary = "Get the current User language")
     @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK),
-        @ApiResponse(code = 400, message = HttpStatuses.BAD_REQUEST),
-        @ApiResponse(code = 403, message = HttpStatuses.FORBIDDEN)
+        @ApiResponse(responseCode = "200", description = HttpStatuses.OK),
+        @ApiResponse(responseCode = "400", description = HttpStatuses.BAD_REQUEST),
+        @ApiResponse(responseCode = "401", description = HttpStatuses.UNAUTHORIZED)
     })
     @GetMapping("/lang")
-    public ResponseEntity<String> getUserLang(@ApiIgnore @CurrentUser UserVO userVO) {
-        return ResponseEntity.status(HttpStatus.OK).body(userVO.getLanguageVO().getCode());
+    public ResponseEntity<String> getUserLang(@Parameter(hidden = true) @CurrentUser UserVO userVO) {
+        return ResponseEntity.ok().body(userVO.getLanguageVO().getCode());
+    }
+
+    /**
+     * Method for getting user language.
+     *
+     * @param uuid uuid of user.
+     * @return user language.
+     */
+    @Operation(summary = "Get the current User language")
+    @ApiResponses(value = {
+        @ApiResponse(responseCode = "200", description = HttpStatuses.OK),
+        @ApiResponse(responseCode = "400", description = HttpStatuses.BAD_REQUEST),
+        @ApiResponse(responseCode = "401", description = HttpStatuses.UNAUTHORIZED)
+    })
+    @GetMapping("/findUserLanguageByUuid")
+    public ResponseEntity<String> findUserLanguageByUuid(@RequestParam String uuid) {
+        return ResponseEntity.ok().body(userService.findUserLanguageByUuid(uuid));
     }
 
     /**
@@ -753,19 +713,17 @@ public class UserController {
      * @param adminLang {@link String} - current administrator language.
      * @return {@link List} of {@link String} - reasons for deactivation of the
      *         current user.
-     * @author Vlad Pikhotskyi
      */
-    @ApiOperation(value = "Get list reasons of deactivating the user")
+    @Operation(summary = "Get list reasons of deactivating the user")
     @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK),
-        @ApiResponse(code = 400, message = HttpStatuses.BAD_REQUEST),
-        @ApiResponse(code = 403, message = HttpStatuses.FORBIDDEN)
+        @ApiResponse(responseCode = "200", description = HttpStatuses.OK),
+        @ApiResponse(responseCode = "400", description = HttpStatuses.BAD_REQUEST),
+        @ApiResponse(responseCode = "403", description = HttpStatuses.FORBIDDEN)
     })
     @GetMapping("/reasons")
     public ResponseEntity<List<String>> getReasonsOfDeactivation(
         @RequestParam("id") Long id, @RequestParam("admin") String adminLang) {
-        List<String> list = userService.getDeactivationReason(id, adminLang);
-        return ResponseEntity.status(HttpStatus.OK).body(list);
+        return ResponseEntity.ok().body(userService.getDeactivationReason(id, adminLang));
     }
 
     /**
@@ -775,14 +733,14 @@ public class UserController {
      *                   profile language
      * @param languageId {@link Long} language id.
      */
-    @ApiOperation(value = "Update user language")
+    @Operation(summary = "Update user language")
     @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK),
-        @ApiResponse(code = 400, message = HttpStatuses.BAD_REQUEST),
-        @ApiResponse(code = 403, message = HttpStatuses.FORBIDDEN)
+        @ApiResponse(responseCode = "200", description = HttpStatuses.OK),
+        @ApiResponse(responseCode = "400", description = HttpStatuses.BAD_REQUEST),
+        @ApiResponse(responseCode = "401", description = HttpStatuses.UNAUTHORIZED)
     })
     @PutMapping("/language/{languageId}")
-    public ResponseEntity<Object> setUserLanguage(@ApiIgnore @CurrentUser UserVO userVO,
+    public ResponseEntity<Object> setUserLanguage(@Parameter(hidden = true) @CurrentUser UserVO userVO,
         @PathVariable Long languageId) {
         userService.updateUserLanguage(userVO.getId(), languageId);
         return ResponseEntity.ok().build();
@@ -792,20 +750,20 @@ public class UserController {
      * Method for setting {@link UserVO}'s status to ACTIVATED.
      *
      * @param id of the searched {@link UserVO}.
-     * @author Orest Mamchuk
      */
-    @ApiOperation(value = "Activate User")
+    @Operation(summary = "Activate User")
     @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK),
-        @ApiResponse(code = 400, message = HttpStatuses.BAD_REQUEST),
-        @ApiResponse(code = 401, message = HttpStatuses.UNAUTHORIZED),
-        @ApiResponse(code = 403, message = HttpStatuses.FORBIDDEN)
+        @ApiResponse(responseCode = "200", description = HttpStatuses.OK),
+        @ApiResponse(responseCode = "400", description = HttpStatuses.BAD_REQUEST),
+        @ApiResponse(responseCode = "401", description = HttpStatuses.UNAUTHORIZED),
+        @ApiResponse(responseCode = "403", description = HttpStatuses.FORBIDDEN),
+        @ApiResponse(responseCode = "404", description = HttpStatuses.NOT_FOUND)
     })
     @PutMapping("/activate")
     public ResponseEntity<Object> activateUser(@RequestParam Long id) {
         UserActivationDto userActivationDto = userService.setActivatedStatus(id);
         emailService.sendMessageOfActivation(userActivationDto);
-        return ResponseEntity.status(HttpStatus.OK).build();
+        return ResponseEntity.ok().build();
     }
 
     /**
@@ -814,36 +772,17 @@ public class UserController {
      *
      * @param listId {@link List} populated with ids of {@link UserVO} to be
      *               deleted.
-     * @author Orest Mamchuk
      */
-    @ApiOperation(value = "Deactivate all users")
+    @Operation(summary = "Deactivate all users")
     @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK),
-        @ApiResponse(code = 400, message = HttpStatuses.BAD_REQUEST),
-        @ApiResponse(code = 401, message = HttpStatuses.UNAUTHORIZED),
-        @ApiResponse(code = 403, message = HttpStatuses.FORBIDDEN)
+        @ApiResponse(responseCode = "200", description = HttpStatuses.OK),
+        @ApiResponse(responseCode = "400", description = HttpStatuses.BAD_REQUEST),
+        @ApiResponse(responseCode = "401", description = HttpStatuses.UNAUTHORIZED),
+        @ApiResponse(responseCode = "403", description = HttpStatuses.FORBIDDEN)
     })
     @PutMapping("/deactivateAll")
     public ResponseEntity<List<Long>> deactivateAllUsers(@RequestBody List<Long> listId) {
-        return ResponseEntity.status(HttpStatus.OK).body(userService.deactivateAllUsers(listId));
-    }
-
-    /**
-     * Method that allow you to save new {@link UserVO}.
-     *
-     * @param userVO for save User
-     * @author Orest Mamchuk
-     */
-    @ApiOperation(value = "Save User")
-    @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK),
-        @ApiResponse(code = 400, message = HttpStatuses.BAD_REQUEST),
-        @ApiResponse(code = 401, message = HttpStatuses.UNAUTHORIZED),
-        @ApiResponse(code = 403, message = HttpStatuses.FORBIDDEN),
-    })
-    @PostMapping()
-    public ResponseEntity<UserVO> saveUser(@RequestBody @CurrentUser UserVO userVO) {
-        return ResponseEntity.status(HttpStatus.OK).body(userService.save(userVO));
+        return ResponseEntity.ok().body(userService.deactivateAllUsers(listId));
     }
 
     /**
@@ -852,18 +791,17 @@ public class UserController {
      * @param pageable    {@link Pageable}
      * @param userViewDto {@link UserManagementViewDto} - stores values.
      */
-    @ApiOperation(value = "Search Users")
+    @Operation(summary = "Search Users")
     @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK),
-        @ApiResponse(code = 400, message = HttpStatuses.BAD_REQUEST),
-        @ApiResponse(code = 401, message = HttpStatuses.UNAUTHORIZED),
-        @ApiResponse(code = 403, message = HttpStatuses.FORBIDDEN),
+        @ApiResponse(responseCode = "200", description = HttpStatuses.OK),
+        @ApiResponse(responseCode = "400", description = HttpStatuses.BAD_REQUEST),
+        @ApiResponse(responseCode = "401", description = HttpStatuses.UNAUTHORIZED),
+        @ApiResponse(responseCode = "403", description = HttpStatuses.FORBIDDEN),
     })
     @PostMapping("/search")
-    public ResponseEntity<PageableAdvancedDto<UserManagementVO>> search(@ApiIgnore Pageable pageable,
+    public ResponseEntity<PageableAdvancedDto<UserManagementVO>> search(@Parameter(hidden = true) Pageable pageable,
         @RequestBody UserManagementViewDto userViewDto) {
-        PageableAdvancedDto<UserManagementVO> found = userService.search(pageable, userViewDto);
-        return ResponseEntity.status(HttpStatus.OK).body(found);
+        return ResponseEntity.ok().body(userService.search(pageable, userViewDto));
     }
 
     /**
@@ -872,14 +810,14 @@ public class UserController {
      * @param emailNotification enum with notification value.
      * @return {@link List} of {@link UserVO}
      */
-    @ApiOperation(value = "Search Users by email notification")
+    @Operation(summary = "Search Users by email notification")
     @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK),
-        @ApiResponse(code = 400, message = HttpStatuses.BAD_REQUEST),
+        @ApiResponse(responseCode = "200", description = HttpStatuses.OK),
+        @ApiResponse(responseCode = "400", description = HttpStatuses.BAD_REQUEST),
     })
     @GetMapping("/findAllByEmailNotification")
     public ResponseEntity<List<UserVO>> findAllByEmailNotification(@RequestParam EmailNotification emailNotification) {
-        return ResponseEntity.status(HttpStatus.OK).body(userService.findAllByEmailNotification(emailNotification));
+        return ResponseEntity.ok().body(userService.findAllByEmailNotification(emailNotification));
     }
 
     /**
@@ -888,14 +826,14 @@ public class UserController {
      *
      * @return number of deleted rows
      */
-    @ApiOperation(value = "Delete deactivated Users")
+    @Operation(summary = "Delete deactivated Users")
     @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK),
-        @ApiResponse(code = 400, message = HttpStatuses.BAD_REQUEST),
+        @ApiResponse(responseCode = "200", description = HttpStatuses.OK),
+        @ApiResponse(responseCode = "400", description = HttpStatuses.BAD_REQUEST),
     })
     @PostMapping("/deleteDeactivatedUsers")
     public ResponseEntity<Integer> scheduleDeleteDeactivatedUsers() {
-        return ResponseEntity.status(HttpStatus.OK).body(userService.scheduleDeleteDeactivatedUsers());
+        return ResponseEntity.ok().body(userService.scheduleDeleteDeactivatedUsers());
     }
 
     /**
@@ -903,14 +841,14 @@ public class UserController {
      *
      * @return {@link List} of cities
      */
-    @ApiOperation(value = "Find all users cities")
+    @Operation(summary = "Find all users cities")
     @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK),
-        @ApiResponse(code = 400, message = HttpStatuses.BAD_REQUEST),
-        @ApiResponse(code = 401, message = HttpStatuses.UNAUTHORIZED)})
+        @ApiResponse(responseCode = "200", description = HttpStatuses.OK),
+        @ApiResponse(responseCode = "400", description = HttpStatuses.BAD_REQUEST),
+        @ApiResponse(responseCode = "401", description = HttpStatuses.UNAUTHORIZED)})
     @GetMapping("/findAllUsersCities")
-    public ResponseEntity<UserCityDto> findAllUsersCities(@ApiIgnore @CurrentUser UserVO userVO) {
-        return ResponseEntity.status(HttpStatus.OK).body(userService.findAllUsersCities(userVO.getId()));
+    public ResponseEntity<UserCityDto> findAllUsersCities(@Parameter(hidden = true) @CurrentUser UserVO userVO) {
+        return ResponseEntity.ok().body(userService.findAllUsersCities(userVO.getId()));
     }
 
     /**
@@ -918,51 +856,50 @@ public class UserController {
      *
      * @return {@link Map} with months
      */
-    @ApiOperation(value = "Find registration months")
+    @Operation(summary = "Find registration months")
     @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK),
-        @ApiResponse(code = 400, message = HttpStatuses.BAD_REQUEST),
-        @ApiResponse(code = 401, message = HttpStatuses.UNAUTHORIZED),
-        @ApiResponse(code = 403, message = HttpStatuses.FORBIDDEN),
+        @ApiResponse(responseCode = "200", description = HttpStatuses.OK),
+        @ApiResponse(responseCode = "400", description = HttpStatuses.BAD_REQUEST),
+        @ApiResponse(responseCode = "401", description = HttpStatuses.UNAUTHORIZED),
+        @ApiResponse(responseCode = "403", description = HttpStatuses.FORBIDDEN),
     })
     @GetMapping("/findAllRegistrationMonthsMap")
     public ResponseEntity<Map<Integer, Long>> findAllRegistrationMonthsMap() {
-        return ResponseEntity.status(HttpStatus.OK).body(userService.findAllRegistrationMonthsMap());
+        return ResponseEntity.ok().body(userService.findAllRegistrationMonthsMap());
     }
 
     /**
-     * Method seach users by name.
+     * Method search users by name.
      */
-    @ApiOperation(value = "Search users by name")
+    @Operation(summary = "Search users by name")
     @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK),
-        @ApiResponse(code = 401, message = HttpStatuses.UNAUTHORIZED),
-        @ApiResponse(code = 400, message = HttpStatuses.BAD_REQUEST),
+        @ApiResponse(responseCode = "200", description = HttpStatuses.OK),
+        @ApiResponse(responseCode = "401", description = HttpStatuses.UNAUTHORIZED),
+        @ApiResponse(responseCode = "400", description = HttpStatuses.BAD_REQUEST),
     })
     @GetMapping("/findUserByName")
     @ApiPageable
     public ResponseEntity<PageableDto<UserAllFriendsDto>> findUserByName(
-        @ApiIgnore Pageable page,
+        @Parameter(hidden = true) Pageable page,
         @RequestParam String name,
-        @ApiIgnore @CurrentUser UserVO userVO) {
-        return ResponseEntity.status(HttpStatus.OK).body(userService.findUserByName(name, page, userVO.getId()));
+        @Parameter(hidden = true) @CurrentUser UserVO userVO) {
+        return ResponseEntity.ok().body(userService.findUserByName(name, page, userVO.getId()));
     }
 
     /**
      * Get {@link UbsCustomerDto} by uuid.
      *
      * @return {@link UbsCustomerDto}.
-     * @author Struk Nazar
      */
-    @ApiOperation(value = "Get User by Uuid")
+    @Operation(summary = "Get User by Uuid")
     @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK),
-        @ApiResponse(code = 400, message = HttpStatuses.BAD_REQUEST),
-        @ApiResponse(code = 401, message = HttpStatuses.UNAUTHORIZED),
+        @ApiResponse(responseCode = "200", description = HttpStatuses.OK),
+        @ApiResponse(responseCode = "400", description = HttpStatuses.BAD_REQUEST),
+        @ApiResponse(responseCode = "401", description = HttpStatuses.UNAUTHORIZED),
     })
     @GetMapping("/findByUuId")
     public ResponseEntity<UbsCustomerDto> findByUuId(@RequestParam String uuid) {
-        return ResponseEntity.status(HttpStatus.OK).body(userService.findByUUid(uuid));
+        return ResponseEntity.ok().body(userService.findUbsCustomerDtoByUuid(uuid));
     }
 
     /**
@@ -970,82 +907,73 @@ public class UserController {
      *
      * @param uuid {@link String} - for found user.
      * @return {@link Boolean}.
-     * @author Maksym Golik
      */
-    @ApiOperation(value = "Check the existence of the user by uuid")
+    @Operation(summary = "Check the existence of the user by uuid")
     @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK),
-        @ApiResponse(code = 400, message = HttpStatuses.BAD_REQUEST)
+        @ApiResponse(responseCode = "200", description = HttpStatuses.OK),
+        @ApiResponse(responseCode = "400", description = HttpStatuses.BAD_REQUEST)
     })
     @GetMapping("/checkByUuid")
     public ResponseEntity<Boolean> checkIfUserExistsByUuId(@RequestParam String uuid) {
-        return ResponseEntity.status(HttpStatus.OK).body(userService.checkIfUserExistsByUuid(uuid));
+        return ResponseEntity.ok().body(userService.checkIfUserExistsByUuid(uuid));
     }
 
     /**
      * Method for mark user like DEACTIVATED .
      *
      * @param uuid - for found user.
-     *
-     * @author Liubomyr Bratakh.
      */
-    @ApiOperation(value = "mark user as DEACTIVATED")
+    @Operation(summary = "mark user as DEACTIVATED")
     @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK),
-        @ApiResponse(code = 303, message = HttpStatuses.SEE_OTHER),
-        @ApiResponse(code = 400, message = HttpStatuses.BAD_REQUEST),
-        @ApiResponse(code = 401, message = HttpStatuses.UNAUTHORIZED),
-        @ApiResponse(code = 404, message = HttpStatuses.NOT_FOUND)
+        @ApiResponse(responseCode = "200", description = HttpStatuses.OK),
+        @ApiResponse(responseCode = "400", description = HttpStatuses.BAD_REQUEST),
+        @ApiResponse(responseCode = "401", description = HttpStatuses.UNAUTHORIZED),
+        @ApiResponse(responseCode = "404", description = HttpStatuses.NOT_FOUND)
     })
     @PutMapping("/markUserAsDeactivated")
     public ResponseEntity<Object> markUserAsDeactivated(
-        @RequestParam @ApiIgnore String uuid) {
+        @RequestParam @Parameter(hidden = true) String uuid) {
         userService.markUserAsDeactivated(uuid);
-        return ResponseEntity.status(HttpStatus.OK).build();
+        return ResponseEntity.ok().build();
     }
 
     /**
      * Method for mark user like ACTIVATED .
      *
      * @param uuid - for found user.
-     *
-     * @author Oksana Spodaryk.
      */
-    @ApiOperation(value = "mark user as ACTIVATED")
+    @Operation(summary = "mark user as ACTIVATED")
     @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK),
-        @ApiResponse(code = 303, message = HttpStatuses.SEE_OTHER),
-        @ApiResponse(code = 400, message = HttpStatuses.BAD_REQUEST),
-        @ApiResponse(code = 401, message = HttpStatuses.UNAUTHORIZED),
-        @ApiResponse(code = 403, message = HttpStatuses.FORBIDDEN),
-        @ApiResponse(code = 404, message = HttpStatuses.NOT_FOUND)
+        @ApiResponse(responseCode = "200", description = HttpStatuses.OK),
+        @ApiResponse(responseCode = "400", description = HttpStatuses.BAD_REQUEST),
+        @ApiResponse(responseCode = "401", description = HttpStatuses.UNAUTHORIZED),
+        @ApiResponse(responseCode = "403", description = HttpStatuses.FORBIDDEN),
+        @ApiResponse(responseCode = "404", description = HttpStatuses.NOT_FOUND)
     })
     @PutMapping("/markUserAsActivated")
     public ResponseEntity<Object> markUserAsActivated(
-        @RequestParam @ApiIgnore String uuid) {
+        @RequestParam @Parameter(hidden = true) String uuid) {
         userService.markUserAsActivated(uuid);
-        return ResponseEntity.status(HttpStatus.OK).build();
+        return ResponseEntity.ok().build();
     }
 
     /**
      * Controller to get information about all employee's authorities.
      *
      * @return @return Set of {@link String}
-     *
-     * @author Inna Yashna.
      */
-    @ApiOperation(value = "Get information about all employee's authorities")
+    @Operation(summary = "Get information about all employee's authorities")
     @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK),
-        @ApiResponse(code = 400, message = HttpStatuses.BAD_REQUEST),
-        @ApiResponse(code = 401, message = HttpStatuses.UNAUTHORIZED),
-        @ApiResponse(code = 403, message = HttpStatuses.FORBIDDEN),
-        @ApiResponse(code = 404, message = HttpStatuses.NOT_FOUND)
+        @ApiResponse(responseCode = "200", description = HttpStatuses.OK),
+        @ApiResponse(responseCode = "400", description = HttpStatuses.BAD_REQUEST),
+        @ApiResponse(responseCode = "401", description = HttpStatuses.UNAUTHORIZED),
+        @ApiResponse(responseCode = "403", description = HttpStatuses.FORBIDDEN),
+        @ApiResponse(responseCode = "404", description = HttpStatuses.NOT_FOUND)
     })
     @GetMapping("/get-all-authorities")
     public ResponseEntity<Object> getAllAuthorities(@RequestParam String email) {
         Set<String> authorities = authorityService.getAllEmployeesAuthorities(email);
-        return ResponseEntity.status(HttpStatus.OK).body(authorities);
+        return ResponseEntity.ok().body(authorities);
     }
 
     /**
@@ -1054,63 +982,41 @@ public class UserController {
      *
      * @param email {@link String} - employee email.
      * @return {@link PositionAuthoritiesDto}
-     *
-     * @author Anton Bondar.
      */
-    @ApiOperation(value = "Get information about an employee`s positions and all possible "
-        + "related authorities to these positions.")
+    @Operation(summary = """
+        Get information about an employee`s positions and all possible \
+        related authorities to these positions.\
+        """)
     @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK),
-        @ApiResponse(code = 400, message = HttpStatuses.BAD_REQUEST),
-        @ApiResponse(code = 401, message = HttpStatuses.UNAUTHORIZED),
-        @ApiResponse(code = 403, message = HttpStatuses.FORBIDDEN),
-        @ApiResponse(code = 404, message = HttpStatuses.NOT_FOUND)
+        @ApiResponse(responseCode = "200", description = HttpStatuses.OK),
+        @ApiResponse(responseCode = "400", description = HttpStatuses.BAD_REQUEST),
+        @ApiResponse(responseCode = "401", description = HttpStatuses.UNAUTHORIZED),
+        @ApiResponse(responseCode = "403", description = HttpStatuses.FORBIDDEN),
+        @ApiResponse(responseCode = "404", description = HttpStatuses.NOT_FOUND)
     })
     @GetMapping("/get-positions-authorities")
     public ResponseEntity<PositionAuthoritiesDto> getPositionsAndRelatedAuthorities(@RequestParam String email) {
-        return ResponseEntity.status(HttpStatus.OK).body(positionService.getPositionsAndRelatedAuthorities(email));
-    }
-
-    /**
-     * Controller to get a list of login employee`s positions.
-     *
-     * @param email {@link String} - employee email.
-     * @return List of {@link String} - list of employee positions.
-     *
-     * @author Anton Bondar.
-     */
-    @ApiOperation(value = "Get information about login employee`s positions.")
-    @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK),
-        @ApiResponse(code = 400, message = HttpStatuses.BAD_REQUEST),
-        @ApiResponse(code = 401, message = HttpStatuses.UNAUTHORIZED),
-        @ApiResponse(code = 403, message = HttpStatuses.FORBIDDEN),
-        @ApiResponse(code = 404, message = HttpStatuses.NOT_FOUND)
-    })
-    @GetMapping("/get-employee-login-positions")
-    public ResponseEntity<List<String>> getEmployeeLoginPositionNames(@RequestParam String email) {
-        return ResponseEntity.status(HttpStatus.OK).body(positionService.getEmployeeLoginPositionNames(email));
+        return ResponseEntity.ok().body(positionService.getPositionsAndRelatedAuthorities(email));
     }
 
     /**
      * Controller edit an employee`s authorities.
      *
      * @return {@link UserEmployeeAuthorityDto}
-     *
-     * @author Nataliia Hlazova.
      */
-    @ApiOperation(value = "Edit an employee`s authorities")
+    @Operation(summary = "Edit an employee`s authorities")
     @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK, response = UserEmployeeAuthorityDto.class),
-        @ApiResponse(code = 400, message = HttpStatuses.BAD_REQUEST),
-        @ApiResponse(code = 401, message = HttpStatuses.UNAUTHORIZED),
-        @ApiResponse(code = 403, message = HttpStatuses.FORBIDDEN),
-        @ApiResponse(code = 404, message = HttpStatuses.NOT_FOUND)
+        @ApiResponse(responseCode = "200", description = HttpStatuses.OK,
+            content = @Content(schema = @Schema(implementation = UserEmployeeAuthorityDto.class))),
+        @ApiResponse(responseCode = "400", description = HttpStatuses.BAD_REQUEST),
+        @ApiResponse(responseCode = "401", description = HttpStatuses.UNAUTHORIZED),
+        @ApiResponse(responseCode = "403", description = HttpStatuses.FORBIDDEN),
+        @ApiResponse(responseCode = "404", description = HttpStatuses.NOT_FOUND)
     })
     @PutMapping("/edit-authorities")
     public ResponseEntity<Object> editAuthorities(@Valid @RequestBody UserEmployeeAuthorityDto dto) {
         authorityService.updateEmployeesAuthorities(dto);
-        return ResponseEntity.status(HttpStatus.OK).build();
+        return ResponseEntity.ok().build();
     }
 
     /**
@@ -1118,41 +1024,39 @@ public class UserController {
      *
      * @param dto - UpdateEmployeeAuthoritiesDto.
      * @return {@link HttpStatus} - Http status code.
-     * @author Nikita Korzh.
      */
-    @ApiOperation(value = "Update an employee`s authorities to related positions")
+    @Operation(summary = "Update an employee`s authorities to related positions")
     @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK),
-        @ApiResponse(code = 400, message = HttpStatuses.BAD_REQUEST),
-        @ApiResponse(code = 401, message = HttpStatuses.UNAUTHORIZED),
-        @ApiResponse(code = 403, message = HttpStatuses.FORBIDDEN),
-        @ApiResponse(code = 404, message = HttpStatuses.NOT_FOUND)
+        @ApiResponse(responseCode = "200", description = HttpStatuses.OK),
+        @ApiResponse(responseCode = "400", description = HttpStatuses.BAD_REQUEST),
+        @ApiResponse(responseCode = "401", description = HttpStatuses.UNAUTHORIZED),
+        @ApiResponse(responseCode = "403", description = HttpStatuses.FORBIDDEN),
+        @ApiResponse(responseCode = "404", description = HttpStatuses.NOT_FOUND)
     })
     @PutMapping("/authorities")
     public ResponseEntity<HttpStatus> updateAuthoritiesToRelatedPositions(
         @Valid @RequestBody EmployeePositionsDto dto) {
         authorityService.updateAuthoritiesToRelatedPositions(dto);
-        return ResponseEntity.status(HttpStatus.OK).build();
+        return ResponseEntity.ok().build();
     }
 
     /**
      * Controller that deactivate employee by uuid.
      *
      * @param uuid - uuid of Employee.
-     * @author Nikita Korzh.
      */
-    @ApiOperation(value = "Deactivate employee by uuid")
+    @Operation(summary = "Deactivate employee by uuid")
     @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK),
-        @ApiResponse(code = 400, message = HttpStatuses.BAD_REQUEST),
-        @ApiResponse(code = 401, message = HttpStatuses.UNAUTHORIZED),
-        @ApiResponse(code = 403, message = HttpStatuses.FORBIDDEN),
-        @ApiResponse(code = 404, message = HttpStatuses.NOT_FOUND)
+        @ApiResponse(responseCode = "200", description = HttpStatuses.OK),
+        @ApiResponse(responseCode = "400", description = HttpStatuses.BAD_REQUEST),
+        @ApiResponse(responseCode = "401", description = HttpStatuses.UNAUTHORIZED),
+        @ApiResponse(responseCode = "403", description = HttpStatuses.FORBIDDEN),
+        @ApiResponse(responseCode = "404", description = HttpStatuses.NOT_FOUND)
     })
     @PutMapping("/deactivate-employee")
     public ResponseEntity<HttpStatus> deactivateEmployee(@RequestParam String uuid) {
         userService.markUserAsDeactivated(uuid);
-        return ResponseEntity.status(HttpStatus.OK).build();
+        return ResponseEntity.ok().build();
     }
 
     /**
@@ -1162,20 +1066,18 @@ public class UserController {
      *                         information.
      * @return A ResponseEntity with HTTP status indicating the success of the
      *         update operation.
-     *
-     * @author Oksana Spodaryk.
      */
-    @ApiOperation(value = "Update an employee's rating information.")
+    @Operation(summary = "Update an employee's rating information.")
     @ApiResponses(value = {
-        @ApiResponse(code = 200, message = HttpStatuses.OK),
-        @ApiResponse(code = 400, message = HttpStatuses.BAD_REQUEST),
-        @ApiResponse(code = 401, message = HttpStatuses.UNAUTHORIZED),
-        @ApiResponse(code = 403, message = HttpStatuses.FORBIDDEN),
-        @ApiResponse(code = 404, message = HttpStatuses.NOT_FOUND)
+        @ApiResponse(responseCode = "200", description = HttpStatuses.OK),
+        @ApiResponse(responseCode = "400", description = HttpStatuses.BAD_REQUEST),
+        @ApiResponse(responseCode = "401", description = HttpStatuses.UNAUTHORIZED),
+        @ApiResponse(responseCode = "403", description = HttpStatuses.FORBIDDEN),
+        @ApiResponse(responseCode = "404", description = HttpStatuses.NOT_FOUND)
     })
     @PutMapping("/user-rating")
     public ResponseEntity<HttpStatus> updateUserRating(@Valid @RequestBody UserAddRatingDto userAddRatingDto) {
         userService.updateUserRating(userAddRatingDto);
-        return ResponseEntity.status(HttpStatus.OK).build();
+        return ResponseEntity.ok().build();
     }
 }
