@@ -1,17 +1,17 @@
 package greencity.security.providers;
 
+import static greencity.constant.AppConstant.ROLE;
 import greencity.security.jwt.JwtTool;
 import io.jsonwebtoken.Jwts;
 import io.jsonwebtoken.UnsupportedJwtException;
+import io.jsonwebtoken.security.Keys;
+import java.util.List;
+import javax.crypto.SecretKey;
+import lombok.RequiredArgsConstructor;
 import org.springframework.security.authentication.AuthenticationProvider;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
-
-import java.util.List;
-import java.util.stream.Collectors;
-
-import static greencity.constant.AppConstant.ROLE;
 
 /**
  * Class that provides authentication logic.
@@ -19,17 +19,9 @@ import static greencity.constant.AppConstant.ROLE;
  * @author Yurii Koval
  * @version 1.1
  */
+@RequiredArgsConstructor
 public class JwtAuthenticationProvider implements AuthenticationProvider {
     private final JwtTool jwtTool;
-
-    /**
-     * Constructor.
-     * 
-     * @param jwtTool {@link JwtTool}
-     */
-    public JwtAuthenticationProvider(JwtTool jwtTool) {
-        this.jwtTool = jwtTool;
-    }
 
     /**
      * Method that provide authentication.
@@ -47,21 +39,24 @@ public class JwtAuthenticationProvider implements AuthenticationProvider {
      */
     @Override
     public Authentication authenticate(Authentication authentication) {
+        SecretKey key = Keys.hmacShaKeyFor(jwtTool.getAccessTokenKey().getBytes());
+
         String email = Jwts.parser()
-            .setSigningKey(jwtTool.getAccessTokenKey())
-            .parseClaimsJws(authentication.getName())
-            .getBody()
+            .verifyWith(key).build()
+            .parseSignedClaims(authentication.getName())
+            .getPayload()
             .getSubject();
         @SuppressWarnings({"unchecked, rawtype"})
         List<String> authorities = (List<String>) Jwts.parser()
-            .setSigningKey(jwtTool.getAccessTokenKey())
-            .parseClaimsJws(authentication.getName())
-            .getBody()
+            .verifyWith(key).build()
+            .parseSignedClaims(authentication.getName())
+            .getPayload()
             .get(ROLE);
+
         return new UsernamePasswordAuthenticationToken(
             email,
             "",
-            authorities.stream().map(SimpleGrantedAuthority::new).collect(Collectors.toList()));
+            authorities.stream().map(SimpleGrantedAuthority::new).toList());
     }
 
     /**
