@@ -1,94 +1,54 @@
 package greencity.client;
 
+import static greencity.constant.AppConstant.AUTHORIZATION;
+import static greencity.constant.AppConstant.FILES;
 import greencity.constant.RestTemplateLinks;
 import greencity.dto.friends.FriendsChatDto;
-import greencity.dto.shoppinglist.CustomShoppingListItemResponseDto;
+import greencity.dto.todolist.CustomToDoListItemResponseDto;
 import greencity.dto.socialnetwork.SocialNetworkImageVO;
 import greencity.dto.ubs.UbsProfileCreationDto;
 import greencity.dto.user.UserVO;
-import greencity.enums.AchievementCategoryType;
-import greencity.enums.AchievementType;
+import jakarta.servlet.http.HttpServletRequest;
+import java.io.IOException;
+import java.util.Arrays;
+import java.util.List;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.io.ByteArrayResource;
-import org.springframework.http.HttpEntity;
-import org.springframework.http.HttpHeaders;
-import org.springframework.http.HttpMethod;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.MediaType;
-import org.springframework.http.ResponseEntity;
+import org.springframework.http.*;
 import org.springframework.stereotype.Component;
 import org.springframework.util.LinkedMultiValueMap;
 import org.springframework.web.client.RestTemplate;
 import org.springframework.web.multipart.MultipartFile;
-
-import javax.servlet.http.HttpServletRequest;
-import java.io.IOException;
-import java.util.Arrays;
-import java.util.List;
-
-import static greencity.constant.AppConstant.AUTHORIZATION;
-import static greencity.constant.AppConstant.IMAGE;
 
 @Slf4j
 @RequiredArgsConstructor
 @Component
 public class RestClient {
     private final RestTemplate restTemplate;
+    private final HttpServletRequest httpServletRequest;
     @Value("${greencity.server.address}")
     private String greenCityServerAddress;
-    private final HttpServletRequest httpServletRequest;
     @Value("${greencitychat.server.address}")
     private String greenCityChatServerAddress;
     @Value("${greencityubs.server.address}")
     private String greenCityUbsServerAddress;
 
     /**
-     * Method for sending request for achievement calculation.
-     */
-    public ResponseEntity<Object> calculateAchievement(Long id, AchievementType setter,
-        AchievementCategoryType socialNetwork, int size) {
-        HttpEntity<String> entity = new HttpEntity<>(setHeader());
-        restTemplate.exchange(greenCityServerAddress + RestTemplateLinks.CALCULATE_ACHIEVEMENT
-            + RestTemplateLinks.CALCULATE_ACHIEVEMENT_ID + id
-            + RestTemplateLinks.CALCULATE_ACHIEVEMENT_SETTER + setter
-            + RestTemplateLinks.CALCULATE_ACHIEVEMENT_SOCIAL_NETWORK + socialNetwork
-            + RestTemplateLinks.CALCULATE_ACHIEVEMENT_SIZE + size,
-            HttpMethod.POST, entity, Object.class);
-        return ResponseEntity.status(HttpStatus.OK).build();
-    }
-
-    /**
-     * Method for finding all custom shopping list items.
+     * Method for finding all custom to-do list items.
      *
      * @param userId of {@link UserVO}
-     * @return list of {@link CustomShoppingListItemResponseDto}
+     * @return list of {@link CustomToDoListItemResponseDto}
      * @author Orest Mamchuk
      */
-    public List<CustomShoppingListItemResponseDto> getAllAvailableCustomShoppingListItems(Long userId, Long habitId) {
+    public List<CustomToDoListItemResponseDto> getAllAvailableCustomToDoListItems(Long userId, Long habitId) {
         HttpEntity<String> entity = new HttpEntity<>(setHeader());
-        ResponseEntity<CustomShoppingListItemResponseDto[]> exchange = restTemplate.exchange(greenCityServerAddress
-            + RestTemplateLinks.CUSTOM_SHOPPING_LIST_ITEMS + userId + "/" + habitId, HttpMethod.GET, entity,
-            CustomShoppingListItemResponseDto[].class);
-        CustomShoppingListItemResponseDto[] responseDtos = exchange.getBody();
-        assert responseDtos != null;
+        ResponseEntity<CustomToDoListItemResponseDto[]> exchange = restTemplate.exchange(greenCityServerAddress
+            + RestTemplateLinks.CUSTOM_TO_DO_LIST_ITEMS + userId + "/" + habitId, HttpMethod.GET, entity,
+            CustomToDoListItemResponseDto[].class);
+        CustomToDoListItemResponseDto[] responseDtos = exchange.getBody();
         return Arrays.asList(responseDtos);
-    }
-
-    /**
-     * Method for convert image to multipart image.
-     *
-     * @param profilePicturePath link to image
-     * @return MultipartFile
-     * @author Orest Mamchuk
-     */
-    public MultipartFile convertToMultipartImage(String profilePicturePath) {
-        HttpEntity<String> entity = new HttpEntity<>(setHeader());
-        return restTemplate.exchange(greenCityServerAddress
-            + RestTemplateLinks.FILES_CONVERT + RestTemplateLinks.IMAGE
-            + profilePicturePath,
-            HttpMethod.POST, entity, MultipartFile.class).getBody();
     }
 
     /**
@@ -104,12 +64,12 @@ public class RestClient {
         headers.setContentType(MediaType.MULTIPART_FORM_DATA);
         HttpEntity<LinkedMultiValueMap<String, Object>> requestEntity = new HttpEntity<>(map, headers);
         try {
-            map.add(IMAGE, convert(image));
+            map.add(FILES, convert(image));
         } catch (IOException e) {
             log.info("File did not convert to ByteArrayResource");
         }
         return restTemplate.postForObject(greenCityServerAddress
-            + RestTemplateLinks.FILES_IMAGE, requestEntity, String.class);
+            + RestTemplateLinks.FILES, requestEntity, String.class);
     }
 
     /**
@@ -149,8 +109,9 @@ public class RestClient {
      */
     public Long findAmountOfPublishedNews(Long userId) {
         HttpEntity<String> entity = new HttpEntity<>(setHeader());
-        return restTemplate.exchange(greenCityServerAddress
-            + RestTemplateLinks.ECONEWS_COUNT + RestTemplateLinks.USER_ID + userId, HttpMethod.GET, entity, Long.class)
+        return restTemplate.exchange(
+            greenCityServerAddress + RestTemplateLinks.ECO_NEWS_COUNT + RestTemplateLinks.AUTHOR_ID + userId,
+            HttpMethod.GET, entity, Long.class)
             .getBody();
     }
 
@@ -178,11 +139,8 @@ public class RestClient {
      */
     public FriendsChatDto chatBetweenTwo(Long firstUserId, Long secondUserId) {
         HttpEntity<String> entity = new HttpEntity<>(setHeader());
-        FriendsChatDto body =
-            restTemplate.exchange(greenCityChatServerAddress + "/chat/exist/" + firstUserId + "/" + secondUserId,
-                HttpMethod.GET, entity, FriendsChatDto.class).getBody();
-        assert body != null;
-        return body;
+        return restTemplate.exchange(greenCityChatServerAddress + "/chat/exist/" + firstUserId + "/" + secondUserId,
+            HttpMethod.GET, entity, FriendsChatDto.class).getBody();
     }
 
     /**
@@ -206,9 +164,8 @@ public class RestClient {
      */
     public List<String> getAllLanguageCodes() {
         String[] restTemplateForObject = restTemplate.getForObject(greenCityServerAddress
-            + RestTemplateLinks.LANGUAGE, String[].class);
-        assert restTemplateForObject != null;
-        return Arrays.asList(restTemplateForObject);
+            + RestTemplateLinks.LANGUAGES + RestTemplateLinks.CODES, String[].class);
+        return List.of(restTemplateForObject);
     }
 
     /**
@@ -254,18 +211,28 @@ public class RestClient {
     }
 
     /**
-     * Method for getting amount of organized and attended events by {@link UserVO}
-     * id.
+     * Method for getting amount of attended events by {@link UserVO} id.
      *
      * @param userId of {@link UserVO}
-     * @return {@link Long} count of organized and attended by user events.
-     *
-     * @author Olena Sotnik
+     * @return {@link Long} count of attended by user events.
      */
-    public Long findAmountOfEventsOrganizedAndAttendedByUser(Long userId) {
+    public Long findAmountOfEventsAttendedByUser(Long userId) {
         HttpEntity<String> entity = new HttpEntity<>(setHeader());
         return restTemplate.exchange(greenCityServerAddress
-            + RestTemplateLinks.EVENTS_ORGANIZED_OR_ATTENDED_BY_USER_COUNT + RestTemplateLinks.USER_ID + userId,
+            + RestTemplateLinks.EVENTS_ATTENDED_COUNT_BY_USER_ID + userId,
+            HttpMethod.GET, entity, Long.class).getBody();
+    }
+
+    /**
+     * Method for getting amount of organized events by {@link UserVO} id.
+     *
+     * @param userId of {@link UserVO}
+     * @return {@link Long} count of organized by user events.
+     */
+    public Long findAmountOfEventsOrganizedByUser(Long userId) {
+        HttpEntity<String> entity = new HttpEntity<>(setHeader());
+        return restTemplate.exchange(greenCityServerAddress
+            + RestTemplateLinks.EVENTS_ORGANIZED_COUNT_BY_USER_ID + userId,
             HttpMethod.GET, entity, Long.class).getBody();
     }
 }
