@@ -13,15 +13,13 @@ import greencity.exception.exceptions.NotFoundException;
 import greencity.repository.AuthorityRepo;
 import greencity.repository.PositionRepo;
 import greencity.repository.UserRepo;
-import greencity.service.EmailService;
-import lombok.AllArgsConstructor;
-import org.springframework.security.core.userdetails.UsernameNotFoundException;
-import org.springframework.stereotype.Service;
-import org.apache.commons.collections4.CollectionUtils;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
+import lombok.AllArgsConstructor;
+import org.apache.commons.collections4.CollectionUtils;
+import org.springframework.security.core.userdetails.UsernameNotFoundException;
+import org.springframework.stereotype.Service;
 
 @Service
 @AllArgsConstructor
@@ -29,7 +27,6 @@ public class AuthorityServiceImpl implements AuthorityService {
     private final UserRepo userRepo;
     private final AuthorityRepo authorityRepo;
     private final PositionRepo positionRepo;
-    private final EmailService emailService;
 
     @Override
     public Set<String> getAllEmployeesAuthorities(String email) {
@@ -53,35 +50,8 @@ public class AuthorityServiceImpl implements AuthorityService {
         if (CollectionUtils.isNotEmpty(dto.getAuthorities())) {
             authorities = authorityRepo.findAuthoritiesByNames(dto.getAuthorities());
         }
-        if (validateOnlyDriverPosition(employee)) {
-            sendRestorePasswordEmail(employee);
-        }
         employee.setAuthorities(authorities);
         userRepo.save(employee);
-    }
-
-    private boolean validateOnlyDriverPosition(User employee) {
-        List<Position> employeePositions = employee.getPositions();
-        return employee.getAuthorities().isEmpty()
-            && employee.getRestorePasswordEmail() != null
-            && employeePositions.size() == 1
-            && employeePositions.stream()
-                .map(Position::getNameEn)
-                .anyMatch("Driver"::equals);
-    }
-
-    private void sendRestorePasswordEmail(User employee) {
-        emailService.sendRestoreEmail(
-            employee.getId(),
-            employee.getFirstName(),
-            employee.getEmail(),
-            employee.getRestorePasswordEmail().getToken(),
-            employee.getLanguage().getCode(),
-            checkRole(employee.getRole()));
-    }
-
-    private boolean checkRole(Role role) {
-        return role.equals(Role.ROLE_UBS_EMPLOYEE);
     }
 
     @Override
@@ -90,14 +60,10 @@ public class AuthorityServiceImpl implements AuthorityService {
             () -> new UsernameNotFoundException(ErrorMessage.USER_NOT_FOUND_BY_EMAIL + dto.getEmail()));
 
         List<String> positionNames = dto.getPositions().stream()
-            .map(PositionDto::getName).collect(Collectors.toList());
+            .map(PositionDto::getName).toList();
 
         List<Position> positions = positionRepo.findPositionsByNames(positionNames);
         List<Authority> list = authorityRepo.findAuthoritiesByPositions(positionNames);
-
-        if (validateOnlyDriverPosition(employee)) {
-            sendRestorePasswordEmail(employee);
-        }
 
         employee.setPositions(positions);
         employee.setAuthorities(list);
