@@ -2,25 +2,27 @@ package greencity.filters;
 
 import greencity.dto.user.UserManagementViewDto;
 import greencity.entity.User;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
-import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
-
-import javax.persistence.criteria.*;
+import jakarta.persistence.criteria.CriteriaBuilder;
+import jakarta.persistence.criteria.Expression;
+import jakarta.persistence.criteria.Path;
+import jakarta.persistence.criteria.Predicate;
+import jakarta.persistence.criteria.Root;
 import java.util.ArrayList;
 import java.util.List;
-
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.Mock;
 import static org.mockito.Mockito.when;
+import org.mockito.junit.jupiter.MockitoExtension;
 
+@ExtendWith(MockitoExtension.class)
 class CustomSpecificationTest {
     @Mock
     private Root<User> root;
-    @Mock
-    private CriteriaQuery<User> criteriaQuery;
     @Mock
     private CriteriaBuilder criteriaBuilder;
     @Mock
@@ -34,7 +36,6 @@ class CustomSpecificationTest {
 
     @BeforeEach
     void init() {
-        MockitoAnnotations.initMocks(this);
         searchCriteriaList = new ArrayList<>();
         UserManagementViewDto userViewDto = UserManagementViewDto.builder()
             .id("1")
@@ -79,18 +80,16 @@ class CustomSpecificationTest {
 
     @Test
     void getIdPredicate() {
-        when(root.get(searchCriteriaList.get(0).getKey())).thenReturn(objectPathExpected);
-        when(criteriaBuilder.equal(objectPathExpected, searchCriteriaList.get(0).getValue()))
+        when(root.get(searchCriteriaList.getFirst().getKey())).thenReturn(objectPathExpected);
+        when(criteriaBuilder.equal(objectPathExpected, searchCriteriaList.getFirst().getValue()))
             .thenThrow(NumberFormatException.class);
-        when(criteriaBuilder.conjunction()).thenReturn(expected);
         when(criteriaBuilder.disjunction()).thenReturn(expected);
-        Predicate actual = userSpecification.getIdPredicate(root, criteriaBuilder, searchCriteriaList.get(0));
+        Predicate actual = userSpecification.getIdPredicate(root, criteriaBuilder, searchCriteriaList.getFirst());
         assertEquals(expected, actual);
     }
 
     @Test
     void getStringPredicate() {
-        when(criteriaBuilder.conjunction()).thenReturn(expected);
         when(root.get(searchCriteriaList.get(1).getKey())).thenReturn(objectPathExpected);
         when(criteriaBuilder.like(any(), eq("%" + searchCriteriaList.get(1).getValue() + "%"))).thenReturn(expected);
         Predicate actual = userSpecification.getStringPredicate(root, criteriaBuilder, searchCriteriaList.get(1));
@@ -100,7 +99,6 @@ class CustomSpecificationTest {
 
     @Test
     void getEnumPredicate() {
-        when(criteriaBuilder.conjunction()).thenReturn(expected);
         when(root.get(searchCriteriaList.get(5).getKey())).thenReturn(objectPathExpected);
         when(objectPathExpected.as(Integer.class)).thenReturn(as);
         when(criteriaBuilder.equal(as, searchCriteriaList.get(5).getValue())).thenReturn(expected);
